# tiktok-library

./: .gitignore  Dockerfile  Dockerfile-pytest-integration  ExampleAnalysisDatabase.ipynb  ExampleInterfaceusage.ipynb  LICENSE  README.md  alembic.ini  conftest.py  docker-compose-postgres-integration-test.yml  docker-compose-run-repeated.EXAMPLE.yml  docker-compose.yml  example-query.json  pyproject.toml  query.yaml  sample_secrets.yaml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 992d4d3bf349_remove_query_tags_crawls_to_query_tags_.py  c45e90da1788_make_userinfo_likes_count_video_count_.py  cdc2ea694856_use_sqlalchemy_orm_many_to_many_.py  ee22882184dd_rename_crawl_crawl.py
src/tiktok_api_helper/: TikTokDateFormat.py  Video.py  access.py  api_client.py  cli_data_acquisition.py  custom_types.py  query.py  region_codes.py  sql.py  test_api_client.py  test_query.py  test_sql.py  test_utils.py  utils.py
src/tiktok_api_helper/testdata/: api_response.json
src/tiktok_research_api_helper/: api_client.py  cli_data_acquisition.py  custom_cli_flag_types.py  custom_types.py  models.py  query.py  utils.py
src/tiktok_research_api_helper/cli/: custom_argument_types.py  main.py
src/tiktok_research_api_lib/: api_client.py  cli_data_acquisition.py  custom_types.py  query.py  sql.py
tests/: common.py  test_api_client.py  test_integration.py  test_models.py  test_query.py  test_sql.py  test_utils.py
tests/testdata/: api_comments_response.json  api_videos_response_page_2_of_2.json  api_videos_response_unicode.json  fake_secrets.yaml
